Bug 246033 - Fix the build on new compilers
Summary: Fix the build on new compilers
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tim Horton
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-10-04 12:43 PDT by Tim Horton
Modified: 2022-10-04 16:03 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Horton 2022-10-04 12:43:50 PDT
Fix the build on new compilers
Comment 1 Tim Horton 2022-10-04 12:44:12 PDT
<rdar://problem/100751561>
Comment 2 Tim Horton 2022-10-04 12:44:52 PDT
Pull request: https://github.com/WebKit/WebKit/pull/4994
Comment 3 EWS 2022-10-04 16:03:52 PDT
Committed 255146@main (cbc50087b905): <https://commits.webkit.org/255146@main>

Reviewed commits have been landed. Closing PR #4994 and removing active labels.