Fix the build on new compilers https://bugs.webkit.org/show_bug.cgi?id=246033 <rdar://100751561>

Reviewed by Sam Weinig.

* Source/JavaScriptCore/API/tests/CustomGlobalObjectClassTest.c:
(customGlobalObjectClassTest):
(globalObjectSetPrototypeTest):
(globalObjectPrivatePropertyTest):
* Source/JavaScriptCore/API/tests/testapi.c:
(timeZoneIsPST):
(checkForCycleInPrototypeChain):
(valueToObjectExceptionTest):
(globalContextNameTest):
(checkConstnessInJSObjectNames):
* Source/JavaScriptCore/disassembler/ARM64/A64DOpcode.cpp:
(JSC::ARM64Disassembler::A64DOpcodeDataProcessing3Source::format):
* Source/WTF/wtf/Assertions.h:
(UNREACHABLE_FOR_PLATFORM):
* Source/WebKit/UIProcess/API/Cocoa/WKContentRuleListStore.mm:
(-[WKContentRuleListStore _getContentRuleListSourceForIdentifier:completionHandler:]):
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _contextMenuInteraction:styleForMenuWithConfiguration:]):
(-[WKContentView contextMenuInteraction:willEndForConfiguration:animator:]):

Canonical link: https://commits.webkit.org/255146@main